--- a/EveTimer.desktop
+++ b/EveTimer.desktop
@@ -5,7 +5,7 @@ Comment=A tool to monitor skill training in EVE-Online
 Exec=EveTimer
 Terminal=false
 Type=Application
-Icon=sonata
+Icon=gnome-set-time
 Categories=GTK;Application;Utility;
 StartupNotify=false
 Encoding=UTF-8
